checkStyle fixes